@@ -1,3 +1,4 @@
+10/1/14 use new JSdoc conventions for @param
 9/8/14 use {Object} instead of {*} as type expression for options param
 7/29/14 check in molarity-128.png (website thumbnail)
 6/26/14 #15 replace explicit prototype assignment with inherit(Object,...)
